--- a/index.html
+++ b/index.html
@@ -3,118 +3,188 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>VIP Access Plans</title>
+  <title>VIP Plans</title>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
   <style>
+    * {
+      box-sizing: border-box;
+    }
     body {
-      font-family: 'Segoe UI', sans-serif;
-      background: #111;
-      color: #eee;
       margin: 0;
-      padding: 0;
+      font-family: 'Roboto', sans-serif;
+      background: linear-gradient(to bottom, #0f0f0f, #1a1a1a);
+      color: #eee;
+      line-height: 1.6;
     }
     header {
-      background: #222;
-      padding: 1rem;
       text-align: center;
+      padding: 2rem 1rem 1rem;
+      background: #111;
       color: #0f0;
-      font-size: 1.5rem;
+      font-size: 2rem;
       font-weight: bold;
+      letter-spacing: 1px;
+      box-shadow: 0 2px 10px rgba(0,0,0,0.4);
     }
+
+    /* 🟢 Running Text (LED Style) */
+    .marquee-container {
+      width: 100%;
+      background: #000;
+      overflow: hidden;
+      white-space: nowrap;
+      box-shadow: inset 0 0 10px #0f0;
+      border-top: 2px solid #0f0;
+      border-bottom: 2px solid #0f0;
+    }
+    .marquee-text {
+      display: inline-block;
+      color: #0f0;
+      font-family: monospace;
+      padding: 8px 0;
+      font-size: 16px;
+      animation: marquee 15s linear infinite;
+    }
+    @keyframes marquee {
+      0% { transform: translateX(100%); }
+      100% { transform: translateX(-100%); }
+    }
+
     .container {
-      max-width: 800px;
+      max-width: 900px;
       margin: auto;
-      padding: 1rem;
+      padding: 2rem 1rem;
     }
-    .plan-card {
-      background: #1a1a1a;
-      border: 1px solid #444;
-      border-radius: 10px;
-      padding: 1rem;
-      margin-bottom: 1rem;
+    .card {
+      background: rgba(255, 255, 255, 0.05);
+      border: 1px solid rgba(255, 255, 255, 0.1);
+      border-radius: 15px;
+      padding: 1.5rem;
+      margin-bottom: 2rem;
+      backdrop-filter: blur(10px);
+      box-shadow: 0 4px 20px rgba(0,0,0,0.3);
+      transition: transform 0.3s;
     }
-    .plan-card h2 {
+    .card:hover {
+      transform: translateY(-5px);
+    }
+    .card h2 {
+      margin-top: 0;
       color: #0f0;
     }
     .btn {
+      display: inline-block;
       background: #0f0;
       color: #000;
-      padding: 0.5rem 1rem;
-      border: none;
-      border-radius: 5px;
+      padding: 0.6rem 1.2rem;
+      border-radius: 8px;
       font-weight: bold;
-      cursor: pointer;
+      text-decoration: none;
+      margin-top: 1rem;
+      transition: background 0.3s;
     }
     .btn:hover {
-      background: #0c0;
+      background: #1aff1a;
     }
-    .download, .payment, .contact {
-      background: #1a1a1a;
-      padding: 1rem;
-      border-radius: 10px;
-      margin-top: 1rem;
+    a {
+      color: #00ffff;
+      text-decoration: none;
     }
-    .download a {
-      color: #0f0;
+    a:hover {
       text-decoration: underline;
+    }
+    ul {
+      list-style: none;
+      padding: 0;
+    }
+    ul li {
+      padding: 0.5rem 0;
+    }
+    .icon {
+      margin-right: 0.5rem;
     }
     .footer {
       text-align: center;
+      font-size: 0.85rem;
       color: #888;
-      font-size: 0.9rem;
-      margin-top: 2rem;
-      padding-bottom: 1rem;
+      margin-top: 3rem;
+      padding-bottom: 2rem;
+    }
+
+    @media (max-width: 600px) {
+      .card {
+        padding: 1rem;
+      }
+      header {
+        font-size: 1.5rem;
+      }
+      .marquee-text {
+        font-size: 14px;
+      }
     }
   </style>
 </head>
 <body>
+
   <header>
-    🎉 VIP Access Plans 🎉
+    🚀 VIP ACCESS PLANS
   </header>
+
+  <!-- 🟢 Running Text -->
+  <div class="marquee-container">
+    <div class="marquee-text">
+      🔥 VIP Access Now Available | 1 Month = 5,000 MMK | 2 Months = 9,000 MMK | TrueMoney & Binance Pay Accepted | Contact Admin via Telegram or Messenger 🔥
+    </div>
+  </div>
 
   <div class="container">
 
-    <!-- Plan Section -->
-    <div class="plan-card">
+    <!-- VIP Plan - 1 Month -->
+    <div class="card">
       <h2>VIP Plan - 1 Month</h2>
-      <p>Enjoy full access for 30 days.</p>
-      <button class="btn">Buy Now - 5,000 MMK</button>
+      <p>Full access for 30 days</p>
+      <p><strong>Price:</strong> 5,000 MMK</p>
+      <a href="#" class="btn">Buy Now</a>
     </div>
 
-    <div class="plan-card">
+    <!-- VIP Plan - 2 Months -->
+    <div class="card">
       <h2>VIP Plan - 2 Months</h2>
-      <p>Enjoy full access for 60 days.</p>
-      <button class="btn">Buy Now - 9,000 MMK</button>
+      <p>Full access for 60 days</p>
+      <p><strong>Price:</strong> 9,000 MMK</p>
+      <a href="#" class="btn">Buy Now</a>
     </div>
 
     <!-- Software Download -->
-    <div class="download">
-      <h3>📦 Software Download</h3>
-      <p>Click to download your software after payment:</p>
-      <a href="https://example.com/download" target="_blank">Download Now</a>
+    <div class="card">
+      <h2>📦 Software Download</h2>
+      <p>Download the VIP software after payment confirmation.</p>
+      <a href="https://example.com/download" class="btn" target="_blank">Download Now</a>
     </div>
 
     <!-- Payment Methods -->
-    <div class="payment">
-      <h3>💰 Payment Methods</h3>
+    <div class="card">
+      <h2>💳 Payment Methods</h2>
       <ul>
-        <li>✅ TrueMoney: 09xxxxxxx</li>
-        <li>✅ Binance Pay: xxxxxxxx</li>
+        <li>✅ <strong>TrueMoney:</strong> 09xxxxxxx</li>
+        <li>✅ <strong>Binance Pay:</strong> binanceuser123</li>
       </ul>
     </div>
 
     <!-- Admin Contact -->
-    <div class="contact">
-      <h3>📞 Contact Admin</h3>
+    <div class="card">
+      <h2>📞 Contact Admin</h2>
       <ul>
-        <li>Telegram: <a href="https://t.me/youradmin" target="_blank">@youradmin</a></li>
-        <li>Messenger: <a href="https://m.me/yourpage" target="_blank">m.me/yourpage</a></li>
-        <li>Phone: 09xxxxxxx</li>
+        <li><span class="icon">📱</span>Telegram: <a href="https://t.me/youradmin" target="_blank">@youradmin</a></li>
+        <li><span class="icon">💬</span>Messenger: <a href="https://m.me/yourpage" target="_blank">m.me/yourpage</a></li>
+        <li><span class="icon">📞</span>Phone: 09xxxxxxx</li>
       </ul>
     </div>
 
     <div class="footer">
-      © 2025 VIP Access. All rights reserved.
+      &copy; 2025 VIP Access | Built with ❤️ in Myanmar
     </div>
   </div>
+
 </body>
 </html>
