--- a/index.html
+++ b/index.html
@@ -6,44 +6,69 @@
   <title>VIP Plans</title>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
   <style>
+    :root {
+      --bg-color: #0f0f0f;
+      --text-color: #eee;
+      --accent-color: #00f;
+      --card-bg: rgba(255, 255, 255, 0.05);
+    }
+    body.light {
+      --bg-color: #ffffff;
+      --text-color: #111;
+      --accent-color: #007bff;
+      --card-bg: #f2f2f2;
+    }
     * {
       box-sizing: border-box;
     }
     body {
       margin: 0;
       font-family: 'Roboto', sans-serif;
-      background: linear-gradient(to bottom, #0f0f0f, #1a1a1a);
-      color: #eee;
+      background: var(--bg-color);
+      color: var(--text-color);
       line-height: 1.6;
+      transition: background 0.4s, color 0.4s;
     }
     header {
       text-align: center;
       padding: 2rem 1rem 1rem;
       background: #111;
-      color: #0f0;
+      color: var(--accent-color);
       font-size: 2rem;
       font-weight: bold;
       letter-spacing: 1px;
       box-shadow: 0 2px 10px rgba(0,0,0,0.4);
     }
+    .theme-toggle {
+      position: absolute;
+      right: 1rem;
+      top: 1.5rem;
+      background: var(--accent-color);
+      color: #fff;
+      border: none;
+      padding: 6px 10px;
+      border-radius: 5px;
+      cursor: pointer;
+      font-weight: bold;
+    }
 
-    /* 🟢 Running Text (LED Style) */
+    /* 🔵 Running Text */
     .marquee-container {
       width: 100%;
       background: #000;
       overflow: hidden;
       white-space: nowrap;
-      box-shadow: inset 0 0 10px #0f0;
-      border-top: 2px solid #0f0;
-      border-bottom: 2px solid #0f0;
+      box-shadow: inset 0 0 10px var(--accent-color);
+      border-top: 2px solid var(--accent-color);
+      border-bottom: 2px solid var(--accent-color);
     }
     .marquee-text {
       display: inline-block;
-      color: #0f0;
+      color: var(--accent-color);
       font-family: monospace;
-      padding: 8px 0;
+      padding: 10px 0;
       font-size: 16px;
-      animation: marquee 15s linear infinite;
+      animation: marquee 25s linear infinite;
     }
     @keyframes marquee {
       0% { transform: translateX(100%); }
@@ -56,26 +81,26 @@
       padding: 2rem 1rem;
     }
     .card {
-      background: rgba(255, 255, 255, 0.05);
+      background: var(--card-bg);
       border: 1px solid rgba(255, 255, 255, 0.1);
       border-radius: 15px;
       padding: 1.5rem;
       margin-bottom: 2rem;
       backdrop-filter: blur(10px);
       box-shadow: 0 4px 20px rgba(0,0,0,0.3);
-      transition: transform 0.3s;
+      transition: transform 0.3s, background 0.4s;
     }
     .card:hover {
       transform: translateY(-5px);
     }
     .card h2 {
       margin-top: 0;
-      color: #0f0;
+      color: var(--accent-color);
     }
     .btn {
       display: inline-block;
-      background: #0f0;
-      color: #000;
+      background: var(--accent-color);
+      color: #fff;
       padding: 0.6rem 1.2rem;
       border-radius: 8px;
       font-weight: bold;
@@ -84,10 +109,10 @@
       transition: background 0.3s;
     }
     .btn:hover {
-      background: #1aff1a;
+      background: #3399ff;
     }
     a {
-      color: #00ffff;
+      color: var(--accent-color);
       text-decoration: none;
     }
     a:hover {
@@ -126,43 +151,58 @@
 </head>
 <body>
 
+  <button class="theme-toggle" onclick="toggleTheme()">🌗 Theme</button>
+
   <header>
     🚀 VIP ACCESS PLANS
   </header>
 
-  <!-- 🟢 Running Text -->
+  <!-- 🔵 Running Text -->
   <div class="marquee-container">
     <div class="marquee-text">
-      🔥 VIP Access Now Available | 1 Month = 5,000 MMK | 2 Months = 9,000 MMK | TrueMoney & Binance Pay Accepted | Contact Admin via Telegram or Messenger 🔥
+      🔵 VIP Now Available! 1M - 5,000 MMK | 2M - 9,000 MMK | 3M - 12,000 MMK | 6M - 20,000 MMK | Binance Pay & TrueMoney Supported | Click Buy Now to Contact Admin 🔵
     </div>
   </div>
 
   <div class="container">
 
-    <!-- VIP Plan - 1 Month -->
+    <!-- Plans -->
     <div class="card">
       <h2>VIP Plan - 1 Month</h2>
       <p>Full access for 30 days</p>
       <p><strong>Price:</strong> 5,000 MMK</p>
-      <a href="#" class="btn">Buy Now</a>
+      <a href="https://m.me/yourpage" class="btn" target="_blank">Buy Now</a>
     </div>
 
-    <!-- VIP Plan - 2 Months -->
     <div class="card">
       <h2>VIP Plan - 2 Months</h2>
       <p>Full access for 60 days</p>
       <p><strong>Price:</strong> 9,000 MMK</p>
-      <a href="#" class="btn">Buy Now</a>
+      <a href="https://m.me/yourpage" class="btn" target="_blank">Buy Now</a>
     </div>
 
-    <!-- Software Download -->
+    <div class="card">
+      <h2>VIP Plan - 3 Months</h2>
+      <p>Full access for 90 days</p>
+      <p><strong>Price:</strong> 12,000 MMK</p>
+      <a href="https://m.me/yourpage" class="btn" target="_blank">Buy Now</a>
+    </div>
+
+    <div class="card">
+      <h2>VIP Plan - 6 Months</h2>
+      <p>Full access for 180 days</p>
+      <p><strong>Price:</strong> 20,000 MMK</p>
+      <a href="https://m.me/yourpage" class="btn" target="_blank">Buy Now</a>
+    </div>
+
+    <!-- Software -->
     <div class="card">
       <h2>📦 Software Download</h2>
-      <p>Download the VIP software after payment confirmation.</p>
+      <p>Download after confirming payment.</p>
       <a href="https://example.com/download" class="btn" target="_blank">Download Now</a>
     </div>
 
-    <!-- Payment Methods -->
+    <!-- Payment -->
     <div class="card">
       <h2>💳 Payment Methods</h2>
       <ul>
@@ -182,9 +222,22 @@
     </div>
 
     <div class="footer">
-      &copy; 2025 VIP Access | Built with ❤️ in Myanmar
+      &copy; 2025 VIP Access | Made with 💙 in Myanmar
     </div>
   </div>
 
+  <script>
+    // Light/Dark Theme Toggle with localStorage
+    function toggleTheme() {
+      document.body.classList.toggle('light');
+      localStorage.setItem('theme', document.body.classList.contains('light') ? 'light' : 'dark');
+    }
+    // Load saved theme on refresh
+    window.onload = () => {
+      if (localStorage.getItem('theme') === 'light') {
+        document.body.classList.add('light');
+      }
+    };
+  </script>
 </body>
 </html>
