--- a/index.html
+++ b/index.html
@@ -10,12 +10,14 @@
       --bg-color: #0f0f0f;
       --text-color: #eee;
       --accent-color: #00f;
+      --vip-color: #00ff00;
       --card-bg: rgba(255, 255, 255, 0.05);
     }
     body.light {
       --bg-color: #ffffff;
       --text-color: #111;
       --accent-color: #007bff;
+      --vip-color: #008800;
       --card-bg: #f2f2f2;
     }
     * {
@@ -52,7 +54,6 @@
       font-weight: bold;
     }
 
-    /* 🔵 Running Text */
     .marquee-container {
       width: 100%;
       background: #000;
@@ -95,7 +96,7 @@
     }
     .card h2 {
       margin-top: 0;
-      color: var(--accent-color);
+      color: var(--vip-color);
     }
     .btn {
       display: inline-block;
@@ -111,12 +112,11 @@
     .btn:hover {
       background: #3399ff;
     }
-    a {
-      color: var(--accent-color);
-      text-decoration: none;
-    }
-    a:hover {
-      text-decoration: underline;
+    .server-label {
+      display: block;
+      margin-top: 8px;
+      font-weight: bold;
+      color: var(--vip-color);
     }
     ul {
       list-style: none;
@@ -157,7 +157,7 @@
     🚀 VIP ACCESS PLANS
   </header>
 
-  <!-- 🔵 Running Text -->
+  <!-- Running Text -->
   <div class="marquee-container">
     <div class="marquee-text">
       🔵 VIP Now Available! 1M - 5,000 MMK | 2M - 9,000 MMK | 3M - 12,000 MMK | 6M - 20,000 MMK | Binance Pay & TrueMoney Supported | Click Buy Now to Contact Admin 🔵
@@ -166,12 +166,13 @@
 
   <div class="container">
 
-    <!-- Plans -->
+    <!-- Plan Cards -->
     <div class="card">
       <h2>VIP Plan - 1 Month</h2>
       <p>Full access for 30 days</p>
       <p><strong>Price:</strong> 5,000 MMK</p>
       <a href="https://m.me/yourpage" class="btn" target="_blank">Buy Now</a>
+      <span class="server-label">🇹🇭 Thai Server</span>
     </div>
 
     <div class="card">
@@ -179,6 +180,7 @@
       <p>Full access for 60 days</p>
       <p><strong>Price:</strong> 9,000 MMK</p>
       <a href="https://m.me/yourpage" class="btn" target="_blank">Buy Now</a>
+      <span class="server-label">🇹🇭 Thai Server</span>
     </div>
 
     <div class="card">
@@ -186,6 +188,7 @@
       <p>Full access for 90 days</p>
       <p><strong>Price:</strong> 12,000 MMK</p>
       <a href="https://m.me/yourpage" class="btn" target="_blank">Buy Now</a>
+      <span class="server-label">🇹🇭 Thai Server</span>
     </div>
 
     <div class="card">
@@ -193,6 +196,7 @@
       <p>Full access for 180 days</p>
       <p><strong>Price:</strong> 20,000 MMK</p>
       <a href="https://m.me/yourpage" class="btn" target="_blank">Buy Now</a>
+      <span class="server-label">🇹🇭 Thai Server</span>
     </div>
 
     <!-- Software -->
@@ -227,12 +231,10 @@
   </div>
 
   <script>
-    // Light/Dark Theme Toggle with localStorage
     function toggleTheme() {
       document.body.classList.toggle('light');
       localStorage.setItem('theme', document.body.classList.contains('light') ? 'light' : 'dark');
     }
-    // Load saved theme on refresh
     window.onload = () => {
       if (localStorage.getItem('theme') === 'light') {
         document.body.classList.add('light');
