--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
     }
     .server-label {
       display: block;
-      margin-top: 10px;
+      margin-top: 8px;
       font-weight: bold;
       color: var(--vip-color);
     }
@@ -153,18 +153,20 @@
   <!-- Running Text -->
   <div class="marquee-container">
     <div class="marquee-text">
-      🔵 VIP Now Available! 1M - 5,000 MMK | 2M - 9,000 MMK | 3M - 12,000 MMK | 6M - 20,000 MMK | Binance Pay & TrueMoney Supported | Click Buy Now to Contact Admin 🔵
+      🔵 VIP Now Available! 1M - 5,000 MMK | 2M - 9,000 MMK | 3M - 12,000 MMK | 6M - 20,000 MMK | Bandwidth Unlimited ✅ | Thai Server 🇹🇭 | Contact Admin via Messenger 🔵
     </div>
   </div>
 
   <div class="container">
 
-    <!-- VIP Plans -->
+    <!-- VIP Plan Cards -->
     <div class="card">
       <h2>VIP Plan - 1 Month</h2>
       <p>Full access for 30 days</p>
       <p><strong>Price:</strong> 5,000 MMK</p>
-      <p><span class="server-label">🇹🇭 Thai Server</span></p>
+      <p class="server-label">🇹🇭 Thai Server</p>
+      <p class="server-label">Bandwidth Unlimited ✅</p>
+      <p class="server-label">Online</p>
       <a href="https://m.me/yourpage" class="btn" target="_blank">Buy Now</a>
     </div>
 
@@ -172,7 +174,9 @@
       <h2>VIP Plan - 2 Months</h2>
       <p>Full access for 60 days</p>
       <p><strong>Price:</strong> 9,000 MMK</p>
-      <p><span class="server-label">🇹🇭 Thai Server</span></p>
+      <p class="server-label">🇹🇭 Thai Server</p>
+      <p class="server-label">Bandwidth Unlimited ✅</p>
+      <p class="server-label">Online</p>
       <a href="https://m.me/yourpage" class="btn" target="_blank">Buy Now</a>
     </div>
 
@@ -180,7 +184,9 @@
       <h2>VIP Plan - 3 Months</h2>
       <p>Full access for 90 days</p>
       <p><strong>Price:</strong> 12,000 MMK</p>
-      <p><span class="server-label">🇹🇭 Thai Server</span></p>
+      <p class="server-label">🇹🇭 Thai Server</p>
+      <p class="server-label">Bandwidth Unlimited ✅</p>
+      <p class="server-label">Online</p>
       <a href="https://m.me/yourpage" class="btn" target="_blank">Buy Now</a>
     </div>
 
@@ -188,18 +194,20 @@
       <h2>VIP Plan - 6 Months</h2>
       <p>Full access for 180 days</p>
       <p><strong>Price:</strong> 20,000 MMK</p>
-      <p><span class="server-label">🇹🇭 Thai Server</span></p>
+      <p class="server-label">🇹🇭 Thai Server</p>
+      <p class="server-label">Bandwidth Unlimited ✅</p>
+      <p class="server-label">Online</p>
       <a href="https://m.me/yourpage" class="btn" target="_blank">Buy Now</a>
     </div>
 
-    <!-- Software -->
+    <!-- Software Download -->
     <div class="card">
       <h2>📦 Software Download</h2>
-      <p>Download after confirming payment.</p>
+      <p>Download available after payment confirmation.</p>
       <a href="https://example.com/download" class="btn" target="_blank">Download Now</a>
     </div>
 
-    <!-- Payment -->
+    <!-- Payment Methods -->
     <div class="card">
       <h2>💳 Payment Methods</h2>
       <ul>
@@ -208,7 +216,7 @@
       </ul>
     </div>
 
-    <!-- Admin Contact -->
+    <!-- Contact Admin -->
     <div class="card">
       <h2>📞 Contact Admin</h2>
       <ul>
@@ -221,6 +229,7 @@
     <div class="footer">
       &copy; 2025 VIP Access | Made with 💙 in Myanmar
     </div>
+
   </div>
 
   <script>
@@ -234,5 +243,6 @@
       }
     };
   </script>
+
 </body>
 </html>
