--- a/index.html
+++ b/index.html
@@ -109,7 +109,10 @@
       display: block;
       margin-top: 8px;
       font-weight: bold;
-      color: var(--vip-color);
+      color: #222;
+    }
+    body:not(.light) .server-label {
+      color: #ccc;
     }
     ul {
       list-style: none;
