--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
   <!-- Running Text -->
   <div class="marquee-container">
     <div class="marquee-text">
-      🔵 VIP Now Available! 1M - 5,000 MMK | 2M - 9,000 MMK | 3M - 12,000 MMK | 6M - 20,000 MMK | Bandwidth Unlimited ✅ | Thai Server 🇹🇭 | Contact Admin via Messenger 🔵
+      🔵 VIP Now Available! 1M - 50 THB | 2M - 100 THB | 3M - 150 THB | 6M - 250 MMK | Bandwidth Unlimited ✅ | Thai Server 🇹🇭 | Contact Admin via Messenger 🔵
     </div>
   </div>
 
@@ -165,38 +165,38 @@
     <!-- VIP Plan Cards -->
     <div class="card">
       <h2>VIP Plan - 1 Month</h2>
-      <p>Price: 5,000 MMK</p>
+      <p>Price: 50 THB</p>
       <p class="server-label">🇹🇭 Thai Server</p>
-      <p class="server-label">Bandwidth Unlimited ✅</p>
-      <p class="server-label">Online</p>
-      <a href="https://m.me/yourpage" class="btn" target="_blank">Buy Now</a>
+      <p class="server-label">✅Bandwidth Unlimited </p>
+      <p class="server-label">🟢Online</p>
+      <a href="https://t.me/Pussy1990" class="btn" target="_blank">Buy Now</a>
     </div>
 
     <div class="card">
       <h2>VIP Plan - 2 Months</h2>
-      <p>Price: 9,000 MMK</p>
+      <p>Price: 100 THB</p>
       <p class="server-label">🇹🇭 Thai Server</p>
-      <p class="server-label">Bandwidth Unlimited ✅</p>
-      <p class="server-label">Online</p>
-      <a href="https://m.me/yourpage" class="btn" target="_blank">Buy Now</a>
+      <p class="server-label">✅Bandwidth Unlimited </p>
+      <p class="server-label">🟢Online</p>
+      <a href="https://t.me/Pussy1990" class="btn" target="_blank">Buy Now</a>
     </div>
 
     <div class="card">
       <h2>VIP Plan - 3 Months</h2>
-      <p>Price: 12,000 MMK</p>
+      <p>Price: 150 THB</p>
       <p class="server-label">🇹🇭 Thai Server</p>
-      <p class="server-label">Bandwidth Unlimited ✅</p>
-      <p class="server-label">Online</p>
-      <a href="https://m.me/yourpage" class="btn" target="_blank">Buy Now</a>
+      <p class="server-label">✅Bandwidth Unlimited </p>
+      <p class="server-label">🟢Online</p>
+      <a href="https://t.me/Pussy1990" class="btn" target="_blank">Buy Now</a>
     </div>
 
     <div class="card">
       <h2>VIP Plan - 6 Months</h2>
       <p>Price: 20,000 MMK</p>
       <p class="server-label">🇹🇭 Thai Server</p>
-      <p class="server-label">Bandwidth Unlimited ✅</p>
-      <p class="server-label">Online</p>
-      <a href="https://m.me/yourpage" class="btn" target="_blank">Buy Now</a>
+      <p class="server-label">✅Bandwidth Unlimited </p>
+      <p class="server-label">🟢Online</p>
+      <a href="https://t.me/Pussy1990" class="btn" target="_blank">Buy Now</a>
     </div>
 
     <!-- Software Download -->
@@ -210,8 +210,8 @@
     <div class="card">
       <h2>💳 Payment Methods</h2>
       <ul>
-        <li>✅ <strong>TrueMoney:</strong> 09xxxxxxxxx</li>
-        <li>✅ <strong>Binance Pay:</strong> binanceuser123</li>
+        <li>✅ <strong>TrueMoney:</strong> 0953244179</li>
+        <li>✅ <strong>Binance ID:</strong> 219766442</li>
       </ul>
     </div>
 
@@ -219,21 +219,21 @@
     <div class="card">
       <h2>📞 Contact Admin</h2>
       <ul>
-        <li><span class="icon">📱</span>Telegram: <a href="https://t.me/youradmin" target="_blank">@youradmin</a></li>
-        <li><span class="icon">💬</span>Messenger: <a href="https://m.me/yourpage" target="_blank">m.me/yourpage</a></li>
+        <li><span class="icon">📱</span>Telegram: <a href="https://t.me/Pussy1990" target="_blank">@youradmin</a></li>
+        <li><span class="icon">💬</span>Messenger: <a href="https://t.me/Pussy1990" target="_blank">m.me/yourpage</a></li>
         <li><span class="icon">📞</span>Phone: 09xxxxxxxxx</li>
       </ul>
     </div>
 
     <!-- Public Info Section -->
     <div class="card">
-      <h2>🧘 Friendly Reminder</h2>
-      <p>ဉမမာ အဆင်ပြေပါစေ 🙏</p>
-      <p>Dtac အသုံးပြုသူများအတွက် စမတ်ပါ – <strong>*117*30#</strong> ကိုနှိပ်ပါ။</p>
+      <h2>🧘အသုံးပြုနည်း</h2>
+      <p>Dtac - *117*30# ( စမတ် )</p>
+      <p>True - *900*8131# ( စမတ် )</p>
     </div>
 
     <div class="footer">
-      &copy; 2025 VIP Access | Made with 💙 in Myanmar
+      &copy; 2025 VIP Access | Made with 💙 by JueHtet.
     </div>
 
   </div>
