--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
 
     <div class="card">
       <h2>VIP Plan - 6 Months</h2>
-      <p>Price: 20,000 MMK</p>
+      <p>Price: 250 THB</p>
       <p class="server-label">🇹🇭 Thai Server</p>
       <p class="server-label">✅Bandwidth Unlimited </p>
       <p class="server-label">🟢Online</p>
