--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>VIP Plans</title>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+  <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
   <style>
     :root {
       --bg-color: #0f0f0f;
@@ -132,6 +133,15 @@
     .card p strong {
       color: var(--accent-color);
     }
+    .public-box {
+      background: #222;
+      border: 1px solid var(--accent-color);
+      padding: 1rem;
+      border-radius: 10px;
+      font-size: 14px;
+      line-height: 1.6;
+      white-space: pre-line;
+    }
     @media (max-width: 600px) {
       .card {
         padding: 1rem;
@@ -147,7 +157,7 @@
 </head>
 <body>
 
-  <button class="theme-toggle" onclick="toggleTheme()">🌗 Theme</button>
+  <button class="theme-toggle" onclick="toggleTheme()">🌗</button>
 
   <header>
     🚀 VIP ACCESS PLANS
@@ -165,37 +175,37 @@
     <!-- VIP Plan Cards -->
     <div class="card">
       <h2>VIP Plan - 1 Month</h2>
-      <p>Price: 50 THB</p>
+      <p><strong>💰 Price:</strong> 50 THB</p>
       <p class="server-label">🇹🇭 Thai Server</p>
-      <p class="server-label">✅Bandwidth Unlimited </p>
-      <p class="server-label">🟢Online</p>
+      <p class="server-label">✅ Bandwidth Unlimited</p>
+      <p class="server-label">🟢 Online</p>
       <a href="https://t.me/Pussy1990" class="btn" target="_blank">Buy Now</a>
     </div>
 
     <div class="card">
       <h2>VIP Plan - 2 Months</h2>
-      <p>Price: 100 THB</p>
+      <p><strong>💰 Price:</strong> 100 THB</p>
       <p class="server-label">🇹🇭 Thai Server</p>
-      <p class="server-label">✅Bandwidth Unlimited </p>
-      <p class="server-label">🟢Online</p>
+      <p class="server-label">✅ Bandwidth Unlimited</p>
+      <p class="server-label">🟢 Online</p>
       <a href="https://t.me/Pussy1990" class="btn" target="_blank">Buy Now</a>
     </div>
 
     <div class="card">
       <h2>VIP Plan - 3 Months</h2>
-      <p>Price: 150 THB</p>
+      <p><strong>💰 Price:</strong> 150 THB</p>
       <p class="server-label">🇹🇭 Thai Server</p>
-      <p class="server-label">✅Bandwidth Unlimited </p>
-      <p class="server-label">🟢Online</p>
+      <p class="server-label">✅ Bandwidth Unlimited</p>
+      <p class="server-label">🟢 Online</p>
       <a href="https://t.me/Pussy1990" class="btn" target="_blank">Buy Now</a>
     </div>
 
     <div class="card">
       <h2>VIP Plan - 6 Months</h2>
-      <p>Price: 250 THB</p>
+      <p><strong>💰 Price:</strong> 250 THB</p>
       <p class="server-label">🇹🇭 Thai Server</p>
-      <p class="server-label">✅Bandwidth Unlimited </p>
-      <p class="server-label">🟢Online</p>
+      <p class="server-label">✅ Bandwidth Unlimited</p>
+      <p class="server-label">🟢 Online</p>
       <a href="https://t.me/Pussy1990" class="btn" target="_blank">Buy Now</a>
     </div>
 
@@ -219,17 +229,20 @@
     <div class="card">
       <h2>📞 Contact Admin</h2>
       <ul>
-        <li><span class="icon">📱</span>Telegram: <a href="https://t.me/Pussy1990" target="_blank">@youradmin</a></li>
-        <li><span class="icon">💬</span>Messenger: <a href="https://t.me/Pussy1990" target="_blank">m.me/yourpage</a></li>
-        <li><span class="icon">📞</span>Phone: 09xxxxxxxxx</li>
+        <li><i class="fab fa-telegram icon"></i> Telegram: <a href="https://t.me/Pussy1990" target="_blank">@youradmin</a></li>
+        <li><i class="fab fa-facebook-messenger icon"></i> Messenger: <a href="https://m.me/yourpage" target="_blank">m.me/yourpage</a></li>
+        <li><i class="fas fa-phone icon"></i> Phone: 09xxxxxxxxx</li>
       </ul>
     </div>
 
-    <!-- Public Info Section -->
+    <!-- Public Message Box -->
     <div class="card">
-      <h2>🧘အသုံးပြုနည်း</h2>
-      <p>Dtac - *117*30# ( စမတ် )</p>
-      <p>True - *900*8131# ( စမတ် )</p>
+      <h2>🧘 အသုံးပြုသည့်အကြံပြုချက်</h2>
+      <div class="public-box">
+ဉမမာ အဆင်ပြေပါစေ 🙏<br>
+Dtac - *117*30# (စမတ်)<br>
+True - *900*8131# (စမတ်)
+      </div>
     </div>
 
     <div class="footer">
