--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>VIP Plans</title>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
-  <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"/>
   <style>
     :root {
       --bg-color: #0f0f0f;
@@ -40,11 +40,12 @@
       font-weight: bold;
       letter-spacing: 1px;
       box-shadow: 0 2px 10px rgba(0,0,0,0.4);
+      position: relative;
     }
     .theme-toggle {
       position: absolute;
       right: 1rem;
-      top: 1.5rem;
+      top: 1rem;
       background: var(--accent-color);
       color: #fff;
       border: none;
@@ -141,6 +142,7 @@
       font-size: 14px;
       line-height: 1.6;
       white-space: pre-line;
+      color: var(--text-color);
     }
     @media (max-width: 600px) {
       .card {
@@ -157,10 +159,9 @@
 </head>
 <body>
 
-  <button class="theme-toggle" onclick="toggleTheme()">🌗</button>
-
   <header>
     🚀 VIP ACCESS PLANS
+    <button class="theme-toggle" onclick="toggleTheme()">🌗</button>
   </header>
 
   <!-- Running Text -->
@@ -172,39 +173,39 @@
 
   <div class="container">
 
-    <!-- VIP Plan Cards -->
+    <!-- VIP Plans -->
     <div class="card">
       <h2>VIP Plan - 1 Month</h2>
-      <p><strong>💰 Price:</strong> 50 THB</p>
+      <p>Price: 50 THB</p>
       <p class="server-label">🇹🇭 Thai Server</p>
-      <p class="server-label">✅ Bandwidth Unlimited</p>
+      <p class="server-label">✅ Bandwidth Unlimited </p>
       <p class="server-label">🟢 Online</p>
       <a href="https://t.me/Pussy1990" class="btn" target="_blank">Buy Now</a>
     </div>
 
     <div class="card">
       <h2>VIP Plan - 2 Months</h2>
-      <p><strong>💰 Price:</strong> 100 THB</p>
+      <p>Price: 100 THB</p>
       <p class="server-label">🇹🇭 Thai Server</p>
-      <p class="server-label">✅ Bandwidth Unlimited</p>
+      <p class="server-label">✅ Bandwidth Unlimited </p>
       <p class="server-label">🟢 Online</p>
       <a href="https://t.me/Pussy1990" class="btn" target="_blank">Buy Now</a>
     </div>
 
     <div class="card">
       <h2>VIP Plan - 3 Months</h2>
-      <p><strong>💰 Price:</strong> 150 THB</p>
+      <p>Price: 150 THB</p>
       <p class="server-label">🇹🇭 Thai Server</p>
-      <p class="server-label">✅ Bandwidth Unlimited</p>
+      <p class="server-label">✅ Bandwidth Unlimited </p>
       <p class="server-label">🟢 Online</p>
       <a href="https://t.me/Pussy1990" class="btn" target="_blank">Buy Now</a>
     </div>
 
     <div class="card">
       <h2>VIP Plan - 6 Months</h2>
-      <p><strong>💰 Price:</strong> 250 THB</p>
+      <p>Price: 250 THB</p>
       <p class="server-label">🇹🇭 Thai Server</p>
-      <p class="server-label">✅ Bandwidth Unlimited</p>
+      <p class="server-label">✅ Bandwidth Unlimited </p>
       <p class="server-label">🟢 Online</p>
       <a href="https://t.me/Pussy1990" class="btn" target="_blank">Buy Now</a>
     </div>
@@ -229,19 +230,19 @@
     <div class="card">
       <h2>📞 Contact Admin</h2>
       <ul>
-        <li><i class="fab fa-telegram icon"></i> Telegram: <a href="https://t.me/Pussy1990" target="_blank">@youradmin</a></li>
-        <li><i class="fab fa-facebook-messenger icon"></i> Messenger: <a href="https://m.me/yourpage" target="_blank">m.me/yourpage</a></li>
-        <li><i class="fas fa-phone icon"></i> Phone: 09xxxxxxxxx</li>
+        <li><span class="icon"><i class="fab fa-telegram"></i></span>Telegram: <a href="https://t.me/Pussy1990" target="_blank">@youradmin</a></li>
+        <li><span class="icon"><i class="fab fa-facebook-messenger"></i></span>Messenger: <a href="https://m.me/yourpage" target="_blank">m.me/yourpage</a></li>
+        <li><span class="icon">📞</span>Phone: 09xxxxxxxxx</li>
       </ul>
     </div>
 
-    <!-- Public Message Box -->
+    <!-- Public Message Section -->
     <div class="card">
-      <h2>🧘 အသုံးပြုသည့်အကြံပြုချက်</h2>
+      <h2>🧘 အသုံးပြုနည်း</h2>
       <div class="public-box">
-ဉမမာ အဆင်ပြေပါစေ 🙏<br>
-Dtac - *117*30# (စမတ်)<br>
-True - *900*8131# (စမတ်)
+        ဉမမာ အဆင်ပြေပါစေ  
+        Dtac - *117*30# (စမတ်)  
+        True - *900*8131# (စမတ်)
       </div>
     </div>
 
