--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>VIP Plans</title>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"/>
   <style>
     :root {
       --bg-color: #0f0f0f;
@@ -40,12 +39,11 @@
       font-weight: bold;
       letter-spacing: 1px;
       box-shadow: 0 2px 10px rgba(0,0,0,0.4);
-      position: relative;
     }
     .theme-toggle {
       position: absolute;
       right: 1rem;
-      top: 1rem;
+      top: 1.5rem;
       background: var(--accent-color);
       color: #fff;
       border: none;
@@ -142,7 +140,12 @@
       font-size: 14px;
       line-height: 1.6;
       white-space: pre-line;
-      color: var(--text-color);
+      color: #fff;
+    }
+    body.light .public-box {
+      background: #f9f9f9;
+      color: #111;
+      border-color: #ccc;
     }
     @media (max-width: 600px) {
       .card {
@@ -159,9 +162,10 @@
 </head>
 <body>
 
+  <button class="theme-toggle" onclick="toggleTheme()">🌗 Theme</button>
+
   <header>
     🚀 VIP ACCESS PLANS
-    <button class="theme-toggle" onclick="toggleTheme()">🌗</button>
   </header>
 
   <!-- Running Text -->
@@ -173,12 +177,12 @@
 
   <div class="container">
 
-    <!-- VIP Plans -->
+    <!-- VIP Plan Cards -->
     <div class="card">
       <h2>VIP Plan - 1 Month</h2>
       <p>Price: 50 THB</p>
       <p class="server-label">🇹🇭 Thai Server</p>
-      <p class="server-label">✅ Bandwidth Unlimited </p>
+      <p class="server-label">✅ Bandwidth Unlimited</p>
       <p class="server-label">🟢 Online</p>
       <a href="https://t.me/Pussy1990" class="btn" target="_blank">Buy Now</a>
     </div>
@@ -187,7 +191,7 @@
       <h2>VIP Plan - 2 Months</h2>
       <p>Price: 100 THB</p>
       <p class="server-label">🇹🇭 Thai Server</p>
-      <p class="server-label">✅ Bandwidth Unlimited </p>
+      <p class="server-label">✅ Bandwidth Unlimited</p>
       <p class="server-label">🟢 Online</p>
       <a href="https://t.me/Pussy1990" class="btn" target="_blank">Buy Now</a>
     </div>
@@ -196,7 +200,7 @@
       <h2>VIP Plan - 3 Months</h2>
       <p>Price: 150 THB</p>
       <p class="server-label">🇹🇭 Thai Server</p>
-      <p class="server-label">✅ Bandwidth Unlimited </p>
+      <p class="server-label">✅ Bandwidth Unlimited</p>
       <p class="server-label">🟢 Online</p>
       <a href="https://t.me/Pussy1990" class="btn" target="_blank">Buy Now</a>
     </div>
@@ -205,7 +209,7 @@
       <h2>VIP Plan - 6 Months</h2>
       <p>Price: 250 THB</p>
       <p class="server-label">🇹🇭 Thai Server</p>
-      <p class="server-label">✅ Bandwidth Unlimited </p>
+      <p class="server-label">✅ Bandwidth Unlimited</p>
       <p class="server-label">🟢 Online</p>
       <a href="https://t.me/Pussy1990" class="btn" target="_blank">Buy Now</a>
     </div>
@@ -230,18 +234,20 @@
     <div class="card">
       <h2>📞 Contact Admin</h2>
       <ul>
-        <li><span class="icon"><i class="fab fa-telegram"></i></span>Telegram: <a href="https://t.me/Pussy1990" target="_blank">@youradmin</a></li>
-        <li><span class="icon"><i class="fab fa-facebook-messenger"></i></span>Messenger: <a href="https://m.me/yourpage" target="_blank">m.me/yourpage</a></li>
-        <li><span class="icon">📞</span>Phone: 09xxxxxxxxx</li>
+        <li><span class="icon">📨</span> Telegram: <a href="https://t.me/Pussy1990" target="_blank">@youradmin</a></li>
+        <li><span class="icon">💬</span> Messenger: <a href="https://m.me/yourpage" target="_blank">m.me/yourpage</a></li>
+        <li><span class="icon">📞</span> Phone: 09xxxxxxxxx</li>
       </ul>
     </div>
 
-    <!-- Public Message Section -->
+    <!-- Public Message -->
     <div class="card">
       <h2>🧘 အသုံးပြုနည်း</h2>
       <div class="public-box">
-        ဉမမာ အဆင်ပြေပါစေ  
-        Dtac - *117*30# (စမတ်)  
+        ဥပမာ အသုံးပြုနည်း
+
+        Dtac - *117*30# (စမတ်)
+
         True - *900*8131# (စမတ်)
       </div>
     </div>
@@ -249,7 +255,6 @@
     <div class="footer">
       &copy; 2025 VIP Access | Made with 💙 by JueHtet.
     </div>
-
   </div>
 
   <script>
@@ -263,6 +268,5 @@
       }
     };
   </script>
-
 </body>
 </html>
