--- a/index.html
+++ b/index.html
@@ -11,20 +11,34 @@
       margin: 0;
       padding: 20px;
     }
+
+    /* LED glowing text */
+    .led-text {
+      text-align: center;
+      font-size: 28px;
+      font-weight: bold;
+      color: #FFD700;
+      text-shadow: 0 0 10px #FFD700, 0 0 20px #FFD700, 0 0 30px #FFA500;
+      animation: glow 2s infinite alternate;
+      margin-bottom: 20px;
+    }
+
+    @keyframes glow {
+      from {
+        text-shadow: 0 0 5px #FFD700, 0 0 10px #FFD700, 0 0 15px #FFA500;
+        opacity: 1;
+      }
+      to {
+        text-shadow: 0 0 2px #FFD700, 0 0 4px #FFD700, 0 0 6px #FFA500;
+        opacity: 0.6;
+      }
+    }
+
     h1, h2 {
       text-align: center;
       color: #333;
     }
-    .logo {
-      text-align: center;
-      margin-bottom: 10px;
-    }
-    .logo img {
-      width: 100px;
-      height: auto;
-      border: none;
-      box-shadow: 0 2px 6px rgba(0,0,0,0.2);
-    }
+
     .plans, .codes, .contact {
       max-width: 800px;
       margin: 30px auto;
@@ -33,12 +47,14 @@
       border-radius: 12px;
       box-shadow: 0 2px 8px rgba(0,0,0,0.1);
     }
+
     .plan-list {
       display: flex;
       justify-content: space-around;
       gap: 20px;
       margin: 20px 0;
     }
+
     .plan-card {
       flex: 1;
       background: #e3f2fd;
@@ -48,10 +64,12 @@
       font-weight: bold;
       color: #0d47a1;
     }
+
     .download {
       text-align: center;
       margin: 30px 0;
     }
+
     .download a {
       display: inline-block;
       background-color: #0d47a1;
@@ -63,32 +81,39 @@
       box-shadow: 0 4px 8px rgba(0,0,0,0.2);
       transition: background-color 0.3s ease;
     }
+
     .download a:hover {
       background-color: #1565c0;
     }
+
     .images {
       display: flex;
       justify-content: space-around;
       margin-top: 20px;
     }
+
     .images img {
       width: 45%;
       border-radius: 10px;
       box-shadow: 0 2px 6px rgba(0,0,0,0.2);
     }
+
     ul {
       list-style: none;
       padding: 0;
     }
+
     ul li {
       padding: 8px 0;
       font-size: 16px;
       border-bottom: 1px solid #ddd;
     }
+
     .contact div {
       margin-top: 10px;
       font-size: 16px;
     }
+
     .highlight {
       color: green;
       font-weight: bold;
@@ -97,10 +122,8 @@
 </head>
 <body>
 
-  <!-- Logo -->
-  <div class="logo">
-    <img src="your-logo.jpg" alt="Logo">
-  </div>
+  <!-- LED Animated Text -->
+  <div class="led-text">🔥 Welcome to VIP Internet Zone 🔥</div>
 
   <h1>VIP Internet Plans</h1>
 
@@ -117,7 +140,7 @@
     </div>
   </div>
 
-  <!-- Download APK between VIP Plans & Jaidee Plans -->
+  <!-- APK Download Link -->
   <div class="download">
     <a href="your-apk-link.apk" download>📥 DOWNLOAD APK</a>
   </div>
