--- a/index.html
+++ b/index.html
@@ -12,15 +12,19 @@
       padding: 20px;
     }
 
-    /* LED glowing text */
+    /* LED glowing text with black background */
     .led-text {
       text-align: center;
       font-size: 28px;
       font-weight: bold;
       color: #FFD700;
+      background-color: #000;
+      padding: 15px 10px;
+      margin-bottom: 20px;
+      border-radius: 12px;
+      box-shadow: 0 0 10px #000;
       text-shadow: 0 0 10px #FFD700, 0 0 20px #FFD700, 0 0 30px #FFA500;
       animation: glow 2s infinite alternate;
-      margin-bottom: 20px;
     }
 
     @keyframes glow {
