--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>VIP Plans with Taxi Animation</title>
+  <title>VIP Plans with Rocket Animation</title>
   <style>
     :root {
       --bg-color: #f5f7fa;
@@ -164,8 +164,8 @@
 
   <div class="led-text">🌐 Welcome to VIP Internet Zone 🌐</div>
 
-  <!-- Lottie Taxi Animation -->
-  <div class="lottie-container" id="lottie-taxi"></div>
+  <!-- Lottie Rocket Animation -->
+  <div class="lottie-container" id="lottie-rocket"></div>
 
   <h1>VIP Internet Plans</h1>
 
@@ -209,11 +209,11 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/lottie-web/5.10.2/lottie.min.js"></script>
   <script>
     lottie.loadAnimation({
-      container: document.getElementById('lottie-taxi'),
+      container: document.getElementById('lottie-rocket'),
       renderer: 'svg',
       loop: true,
       autoplay: true,
-      path: 'https://assets10.lottiefiles.com/packages/lf20_wq6yzlmw.json'
+      path: 'https://assets10.lottiefiles.com/packages/lf20_3rwasyjy.json' // Rocket animation
     });
 
     function toggleTheme() {
