--- a/index.html
+++ b/index.html
@@ -177,8 +177,8 @@
     </div>
 
     <div class="images">
-      <img src="your-image-1.jpg" alt="VIP Image 1" />
-      <img src="your-image-2.jpg" alt="VIP Image 2" />
+      <img src="https://raw.githubusercontent.com/JHKVPN/VIP/main/image/v1.png" alt="VIP Image 1" />
+      <img src="https://raw.githubusercontent.com/JHKVPN/VIP/main/image/v2.png" alt="VIP Image 2" />
     </div>
   </div>
 
