--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
   </div>
 
   <div class="download">
-    <a href="your-apk-link.apk" download>📥 DOWNLOAD APK</a>
+    <a href="https://github.com/JHKVPN/VIP/releases/download/v1.2.0/JK.VIP.VPN_1.2.0.apk" download>📥 DOWNLOAD APK</a>
   </div>
 
   <div class="codes">
