--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
   <div class="video-section">
     <h2>🎥 VIP မန်ဘာ၀င်နည်းကြည့်ရန်</h2>
     <div class="video-wrapper">
-      <iframe src="https://youtu.be/NP93NkFTmWo?si=e9zukcBT4sXSRrIr"
+      <iframe src="https://www.youtube.com/embed/NP93NkFTmWo"
         title="Membership Tutorial" frameborder="0" allowfullscreen></iframe>
     </div>
   </div>
