--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
   </div>
 
   <div class="codes">
-    <h2>📲 Jaidee Codes & Plans</h2>
+    <h2>📲 VIP သုံးရန် Plan စမတ်ကုဒ်များ</h2>
     <ul>
       <li>DTAC Jaidee <strong>*117*30#</strong>(30 THB)</li>
       <li>TRUE Jaidee <strong>*900*8131#</strong>(31.50 THB)</li>
