--- a/index.html
+++ b/index.html
@@ -53,19 +53,28 @@
       text-align: center;
       font-size: 28px;
       font-weight: bold;
-      color: var(--led-color);
       background-color: #000;
       padding: 15px 10px;
       margin: 60px auto 20px;
       border-radius: 12px;
       letter-spacing: 1px;
-      animation: pulse 1.5s infinite ease-in-out;
+      animation: pulse 1.5s infinite ease-in-out, color-shift 3s infinite linear;
       max-width: 800px;
+      color: #00ff00;
     }
 
     @keyframes pulse {
       0%, 100% { opacity: 1; }
       50% { opacity: 0.4; }
+    }
+
+    @keyframes color-shift {
+      0%   { color: #ffff00; } /* Yellow */
+      20%  { color: #00ff00; } /* Green */
+      40%  { color: #ff0000; } /* Red */
+      60%  { color: #0000ff; } /* Blue */
+      80%  { color: #ff00ff; } /* Pink */
+      100% { color: #ffff00; } /* Back to Yellow */
     }
 
     .lottie-container {
