--- a/index.html
+++ b/index.html
@@ -77,6 +77,30 @@
       100% { color: #ffff00; } /* Back to Yellow */
     }
 
+    .marquee-box {
+      background: #000;
+      overflow: hidden;
+      white-space: nowrap;
+      border-radius: 12px;
+      max-width: 800px;
+      margin: 0 auto 30px;
+      border: 2px solid #00ff00;
+    }
+
+    .marquee-content {
+      display: inline-block;
+      padding: 15px;
+      font-size: 20px;
+      font-weight: bold;
+      color: #00ff00;
+      animation: marquee 15s linear infinite;
+    }
+
+    @keyframes marquee {
+      0% { transform: translateX(100%); }
+      100% { transform: translateX(-100%); }
+    }
+
     .lottie-container {
       width: 100%;
       max-width: 400px;
@@ -226,6 +250,11 @@
   <button class="theme-toggle" onclick="toggleTheme()">🌓 Theme</button>
 
   <div class="led-text">🙏🏿 မဂ်လာပါမိတ်ဆွေ 🙏🏿</div>
+
+  <!-- 🟢 NEW Running Text -->
+  <div class="marquee-box">
+    <div class="marquee-content">📢 VIP Promotion: Buy 1 Get 1 Free! Limited Time. 📢 VIP Promotion: Buy 1 Get 1 Free! Limited Time.</div>
+  </div>
 
   <!-- Lottie Rocket Animation -->
   <div class="lottie-container" id="lottie-rocket"></div>
