--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
       40%  { color: #ff0000; } /* Red */
       60%  { color: #0000ff; } /* Blue */
       80%  { color: #ff00ff; } /* Pink */
-      100% { color: #ffff00; } /* Back to Yellow */
+      100% { color: #ffff00; }
     }
 
     .marquee-box {
@@ -84,7 +84,7 @@
       border-radius: 12px;
       max-width: 800px;
       margin: 0 auto 30px;
-      border: 2px solid #00ff00;
+      border: 2px solid #00BFFF;
     }
 
     .marquee-content {
@@ -92,7 +92,7 @@
       padding: 15px;
       font-size: 20px;
       font-weight: bold;
-      color: #00ff00;
+      color: #00BFFF;
       animation: marquee 15s linear infinite;
     }
 
@@ -251,7 +251,7 @@
 
   <div class="led-text">🙏🏿 မဂ်လာပါမိတ်ဆွေ 🙏🏿</div>
 
-  <!-- 🟢 NEW Running Text -->
+  <!-- 🟦 Updated Running Text -->
   <div class="marquee-box">
     <div class="marquee-content">📢 VIP Promotion: Buy 1 Get 1 Free! Limited Time. 📢 VIP Promotion: Buy 1 Get 1 Free! Limited Time.</div>
   </div>
