--- a/index.html
+++ b/index.html
@@ -249,11 +249,11 @@
 
   <button class="theme-toggle" onclick="toggleTheme()">🌓 Theme</button>
 
-  <div class="led-text">🙏🏿 မဂ်လာပါမိတ်ဆွေ 🙏🏿</div>
+  <div class="led-text">🙏🏿 JK VIP VPN 🙏🏿</div>
 
   <!-- 🟦 Updated Running Text -->
   <div class="marquee-box">
-    <div class="marquee-content">📢 VIP Promotion: Buy 1 Get 1 Free! Limited Time. 📢 VIP Promotion: Buy 1 Get 1 Free! Limited Time.</div>
+    <div class="marquee-content">📢 VIP 1Month 50 ,2Months 100,3Months 120 အချိန်တိုးစရာမလိုပါ တလအကြိုက်သုံး။ 📢 VIP 1Month 50 ,2Months 100,3Months 120 အချိန်တိုးစရာမလိုပါ တလအကြိုက်သုံး</div>
   </div>
 
   <!-- Lottie Rocket Animation -->
