--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       background: var(--bg-color);
       color: var(--text-color);
       margin: 0;
-      padding: 20px;
+      padding: 60px 20px 20px;
       transition: background 0.3s, color 0.3s;
       overflow-x: hidden;
     }
@@ -59,6 +59,28 @@
       background-color: #0d47a1;
       color: #fff;
     }
+    .running-banner {
+      background: black;
+      color: lime;
+      padding: 10px;
+      white-space: nowrap;
+      overflow: hidden;
+      position: fixed;
+      top: 0;
+      width: 100%;
+      font-weight: bold;
+      z-index: 999;
+      font-size: 18px;
+    }
+    .running-text {
+      display: inline-block;
+      padding-left: 100%;
+      animation: scroll 20s linear infinite;
+    }
+    @keyframes scroll {
+      from { transform: translateX(0); }
+      to { transform: translateX(-100%); }
+    }
     .led-text {
       text-align: center;
       font-size: 28px;
@@ -79,27 +101,6 @@
       60%  { color: #0000ff; }
       80%  { color: #ff00ff; }
       100% { color: #ffff00; }
-    }
-    .marquee-box {
-      background: #000;
-      overflow: hidden;
-      white-space: nowrap;
-      border-radius: 12px;
-      max-width: 800px;
-      margin: 0 auto 30px;
-      border: 2px solid #00BFFF;
-    }
-    .marquee-content {
-      display: inline-block;
-      padding: 15px;
-      font-size: 20px;
-      font-weight: bold;
-      color: #00BFFF;
-      animation: marquee 25s linear infinite;
-    }
-    @keyframes marquee {
-      0% { transform: translateX(100%); }
-      100% { transform: translateX(-100%); }
     }
     .lottie-container {
       width: 100%;
@@ -126,9 +127,6 @@
     }
     @media(min-width: 600px) {
       .plan-list {
-        flex-direction: row;
-      }
-      .images {
         flex-direction: row;
       }
     }
@@ -165,6 +163,11 @@
       flex-direction: column;
       gap: 15px;
       margin-top: 20px;
+    }
+    @media(min-width: 600px) {
+      .images {
+        flex-direction: row;
+      }
     }
     .images img {
       width: 100%;
@@ -239,6 +242,10 @@
   </style>
 </head>
 <body>
+  <div class="running-banner">
+    <div class="running-text">🙏🏿 JK VIP VPN 🙏🏿 📢 VIP 1Month 50 ,2Months 100,3Months 120 အချိန်တိုးစရာမလိုပါ တလအကြိုက်သုံး။</div>
+  </div>
+
   <button class="theme-toggle" onclick="toggleTheme()">🌓 Theme</button>
 
   <div class="lang-switcher">
@@ -248,12 +255,6 @@
   </div>
 
   <div class="led-text">🙏🏿 JK VIP VPN 🙏🏿</div>
-
-  <div class="marquee-box">
-    <div class="marquee-content">
-      📢 VIP 1Month 50 ,2Months 100,3Months 120 အချိန်တိုးစရာမလိုပါ တလအကြိုက်သုံး။ 📢 VIP 1Month 50 ,2Months 100,3Months 120 အချိန်တိုးစရာမလိုပါ တလအကြိုက်သုံး။
-    </div>
-  </div>
 
   <div class="lottie-container" id="lottie-rocket"></div>
 
@@ -278,11 +279,11 @@
   <div class="codes">
     <h2>📲 VIP သုံးရန် Plan စမတ်ကုဒ်များ</h2>
     <ul>
-      <li>DTAC Jaidee <strong>*117*30#</strong>(30 THB)</li>
-      <li>TRUE Jaidee <strong>*900*8131#</strong>(31.50 THB)</li>
+      <li>DTAC Jaidee <strong>*117*30#</strong> (30 THB)</li>
+      <li>TRUE Jaidee <strong>*900*8131#</strong> (31.50 THB)</li>
       <li>DTAC Gaming Plan ( DTAC APP )</li>
-      <li>True Viber Plan<strong>*900*3809#</strong>( 53 THB )</li>
-      <li>True VDO Plan<strong>*900*1347#</strong>(54 THB )</li>
+      <li>True Viber Plan <strong>*900*3809#</strong> (53 THB)</li>
+      <li>True VDO Plan <strong>*900*1347#</strong> (54 THB)</li>
     </ul>
   </div>
 
