--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       background: var(--bg-color);
       color: var(--text-color);
       margin: 0;
-      padding: 60px 20px 20px;
+      padding: 80px 20px 20px; /* Increased top padding */
       transition: background 0.3s, color 0.3s;
       overflow-x: hidden;
     }
@@ -67,6 +67,8 @@
       overflow: hidden;
       position: fixed;
       top: 0;
+      left: 0;
+      right: 0;
       width: 100%;
       font-weight: bold;
       z-index: 999;
