--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       background: var(--bg-color);
       color: var(--text-color);
       margin: 0;
-      padding: 80px 20px 20px; /* Increased top padding */
+      padding: 80px 20px 20px;
       transition: background 0.3s, color 0.3s;
       overflow-x: hidden;
     }
@@ -71,7 +71,7 @@
       right: 0;
       width: 100%;
       font-weight: bold;
-      z-index: 999;
+      z-index: 998;
       font-size: 18px;
     }
     .running-text {
