--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
   </div>
 
   <div class="download">
-    <a href="https://github.com/JHKVPN/VIP/releases/download/v1.2.0/JK.VIP.VPN_1.2.0.apk" download>📥 DOWNLOAD APK</a>
+    <a href="https://github.com/JUEHTET1991/JKVIP/releases/download/V1.2.0/JK.VIP.VPN_1.2.0.apk" download>📥 DOWNLOAD APK</a>
   </div>
 
   <div class="codes">
@@ -324,7 +324,7 @@
         <img src="https://cdn-icons-png.flaticon.com/512/2111/2111342.png" alt="Messenger" />
         Messenger Chat
       </a>
-      <a href="https://t.me/Pussy1990" target="_blank" class="social-link">
+      <a href="https://t.me/jk_vipvpn_bot" target="_blank" class="social-link">
         <img src="https://cdn-icons-png.flaticon.com/512/2111/2111646.png" alt="Telegram" />
         Telegram Chat
       </a>
