--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>VIP Plans with Rocket Animation</title>
+  <title>JK VPN VIP Fast & Security</title>
   <meta name="theme-color" content="#1e1e1e" media="(prefers-color-scheme: dark)">
   <meta name="theme-color" content="#f5f7fa" media="(prefers-color-scheme: light)">
   <link rel="icon" href="https://cdn-icons-png.flaticon.com/512/3271/3271369.png" type="image/png">
