--- a/index.html
+++ b/index.html
@@ -76,7 +76,6 @@
       text-align: center;
       font-size: 32px;
       font-weight: bold;
-      background: linear-gradient(135deg, var(--primary-color) 0%, var(--secondary-color) 100%);
       padding: 15px;
       margin: 20px auto;
       border-radius: 12px;
@@ -86,6 +85,14 @@
       color: white;
       text-shadow: 0 2px 4px rgba(0, 0, 0, 0.5);
       border: 2px solid var(--accent-color);
+      animation: colorChange 5s infinite alternate;
+    }
+    @keyframes colorChange {
+      0% { background: linear-gradient(135deg, #8A2BE2 0%, #FF1493 100%); }
+      25% { background: linear-gradient(135deg, #FF1493 0%, #00FFFF 100%); }
+      50% { background: linear-gradient(135deg, #00FFFF 0%, #FFD700 100%); }
+      75% { background: linear-gradient(135deg, #FFD700 0%, #8A2BE2 100%); }
+      100% { background: linear-gradient(135deg, #8A2BE2 0%, #00FFFF 100%); }
     }
     .lottie-container {
       width: 100%;
@@ -204,18 +211,13 @@
     }
     .images {
       display: flex;
-      justify-content: space-around;
-      flex-direction: column;
+      justify-content: space-between;
+      flex-wrap: wrap;
       gap: 20px;
       margin-top: 20px;
     }
-    @media(min-width: 600px) {
-      .images {
-        flex-direction: row;
-      }
-    }
     .images img {
-      width: 100%;
+      width: 48%;
       border-radius: 12px;
       box-shadow: 0 6px 20px rgba(0, 0, 0, 0.4);
       transition: transform 0.3s ease;
